<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioTest</string>
    <string name="title_activity_main">Tīng​Shuō​</string>
    <string name="authorEmail">cullen.schaffer@hunter.cuny.edu</string>
    <string name="playButtonLabel">说</string>
    <string name="hanziButtonLabel">字</string>
    <string name="repeatButtonLabel">重</string>
    <string name="pauseButtonLabel">休</string>
    <string name="reading_next">下</string>
    <string name="reading_say">说</string>
    <string name="startTime">0:00</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="reset">Reset</string>
    <string name="reallyReset">Reset timer and discard current clip?</string>
    <string name="quit">Confirm quit</string>
    <string name="reallyQuit">Quit?  This will reset timer and discard current clip.</string>
    <string name="setTimeGoal">Set time goal</string>
    <string name="clearTimeGoal">Clear time goal</string>
    <string name="switchWhat">Switch to what?</string>
    <string name="setReadingMode">Reading mode</string>
    <string name="setListeningMode">Listening mode</string>
    <string name="selectClips">Select clips</string>
    <string name="selectAll">Select all</string>
    <string name="deselectAll">Deselect all</string>
    <string name="selectionComplete">OK</string>
    <string name="thumbsUpDesc">Thumbs up</string>
    <string name="thumbsDownDesc">Thumbs down</string>
    <string name="clearPreferences">Clear preferences</string>
    <string name="genericError">Something went wrong.</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>