<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/thumbWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/thumbsDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30sp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/thumbsDownDesc"
                android:src="@drawable/thumbsdown" />

            <ImageView
                android:id="@+id/thumbsUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/thumbsUpDesc"
                android:src="@drawable/thumbsup" />
        </LinearLayout>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5sp"
            android:text="@string/startTime"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/hanziTextView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/reading_next"
            android:textSize="70sp" />

        <Button
            android:id="@+id/repeatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/reading_say"
            android:textSize="70sp" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pauseButtonLabel"
            android:textSize="70sp" />

        <!-- <ImageButton -->
        <!-- android:id="@+id/pauseButton" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:background="#0000ff" -->
        <!-- android:contentDescription="@string/buttonLabel" -->
        <!-- android:src="@drawable/ic_action_search" /> -->

    </LinearLayout>

</LinearLayout>